# photoframe

./: LICENSE  README.md  install.sh  photo.py  pyproject.toml
config/: config.json
docs/: ux-style-guide.md
logrotate/: photoframe
server/: __init__.py  __main__.py  app.py  carousel.py  image_processing.py  scheduler.py  utils.py  widgets.py
server/api/: __init__.py  config.py  dependencies.py  images.py  logs.py  render.py  status.py  uploads.py  weather.py  widgets.py
server/cache/: __init__.py  files.py  memory.py  models.py  sqlite.py
server/config/: __init__.py  loader.py
server/device/: __init__.py  driver.py
server/inky/: display.py
server/models/: __init__.py  config.py
server/renderer/: __init__.py  layout.py  pipeline.py  surface.py  theme.py
server/rendering/: __init__.py  preview.py
server/routes/: calendar.py  images.py
server/static/: main.js  style.css
server/storage/: files.py
server/templates/: index.html  layout.html
server/widgets/: __init__.py  base.py  cache.py  calendar.py  clock.py  message.py  photos.py  registry.py  renderer_helpers.py  surface.py  weather.default.yaml  weather.py
src/smart_display/: __init__.py  app.py  config.py
src/smart_display/data/: __init__.py  agenda.py  market.py  (+1 more)
static/css/: main.css
static/js/: api.js  app.js
systemd/: photoframe.service
templates/: index.html
tests/: test_api_status.py  test_app_cache.py  test_app_templates.py  test_config.py  test_images_api.py  test_layout.py  test_uploads.py  test_widgets.py
tests/frontend/: timers.test.mjs
udev/: 99-photoframe.rules
(+19 files in other folders)
